--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
 
     - name: Set up Kind
       uses: helm/kind-action@v1.5.0
+    
+    - name: create kind cluster
+      run: kind create cluster --name kind
 
     - name: Build Docker image
       run: docker build -t wisecow:latest .
