--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,16 @@ jobs:
     - name: Install NGINX Ingress
       run: |
         kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.0/deploy/static/provider/kind/deploy.yaml
-        sleep 30
+        sleep 60
+
+    - name: Wait for ingress webhook to be ready
+      run: |
+       echo "Waiting for ingress-nginx webhook to be ready..."
+       kubectl wait --namespace ingress-nginx \
+         --for=condition=Ready pod \
+         --selector=app.kubernetes.io/component=controller \
+         --timeout=120s
+
 
     - name: Generate TLS certs
       run: |
