--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,22 +72,22 @@ jobs:
         echo "🌐 Ingress:"
         kubectl describe ingress wisecow-ingress
 
-    - name: Wait for Wisecow pod to be ready (with fallback)
-      run: |
-        echo "⏳ Waiting for Wisecow pod to be ready..."
-        for i in {1..5}; do
-          READY=$(kubectl get pods -l app=wisecow -o jsonpath="{.items[0].status.containerStatuses[0].ready}")
-          if [ "$READY" == "true" ]; then
-            echo "✅ Wisecow pod is ready"
-            exit 0
-          fi
-          echo "⏳ Pod not ready yet, retrying in 180s..."
-          sleep 180
-        done
-        echo "❌ Pod failed to become ready"
-        exit 1
+    # - name: Wait for Wisecow pod to be ready (with fallback)
+    #   run: |
+    #     echo "⏳ Waiting for Wisecow pod to be ready..."
+    #     for i in {1..5}; do
+    #       READY=$(kubectl get pods -l app=wisecow -o jsonpath="{.items[0].status.containerStatuses[0].ready}")
+    #       if [ "$READY" == "true" ]; then
+    #         echo "✅ Wisecow pod is ready"
+    #         exit 0
+    #       fi
+    #       echo "⏳ Pod not ready yet, retrying in 180s..."
+    #       sleep 180
+    #     done
+    #     echo "❌ Pod failed to become ready"
+    #     exit 1
 
-    - name: Describe Wisecow pod (if needed)
+    - name: Describe Wisecow pod 
       run: |
         POD_NAME=$(kubectl get pods -l app=wisecow -o jsonpath="{.items[0].metadata.name}")
         kubectl describe pod $POD_NAME
