--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,6 +14,19 @@ spec:
     spec:
       containers:
       - name: wisecow
-        image: dsk2612/wisecow
+        image: dsk2612/wisecow:latest
         ports:
         - containerPort: 4499
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 4499
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 250m
+            memory: 256Mi
