--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -13,20 +13,23 @@ spec:
         app: wisecow
     spec:
       containers:
-      - name: wisecow
-        image: dsk2612/wisecow:latest
-        ports:
-        - containerPort: 4499
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 4499
-          initialDelaySeconds: 5
-          periodSeconds: 10
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 250m
-            memory: 256Mi
+        - name: wisecow
+          image: dsk2612/wisecow:latest
+          ports:
+            - containerPort: 4499
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 4499
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 3
+            successThreshold: 1
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 250m
+              memory: 256Mi
