--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: List files
-      run: ls -R
+    # - name: List files
+    #   run: ls -R
 
     - name: Set up Kind
       uses: helm/kind-action@v1.5.0
@@ -68,19 +68,27 @@ jobs:
         echo "🌐 Ingress:"
         kubectl describe ingress wisecow-ingress
 
-    - name: Describe Wisecow pod
-      run: |
-        POD_NAME=$(kubectl get pods -l app=wisecow -o jsonpath="{.items[0].metadata.name}")
-        kubectl describe pod $POD_NAME
+    # - name: Describe Wisecow pod
+    #   run: |
+    #     POD_NAME=$(kubectl get pods -l app=wisecow -o jsonpath="{.items[0].metadata.name}")
+    #     kubectl describe pod $POD_NAME
 
-    - name: Check for image pull errors
-      run: kubectl get events --sort-by='.lastTimestamp'
+    # - name: Check for image pull errors
+    #   run: kubectl get events --sort-by='.lastTimestamp'
+
+    # - name: Port-forward Wisecow service to localhost
+    #   run: |
+    #     echo "Starting port-forward to localhost:4499..."
+    #     kubectl port-forward svc/wisecow-service 4499:4499 &
+    #     sleep 10
 
     - name: Port-forward Wisecow service to localhost
       run: |
         echo "Starting port-forward to localhost:4499..."
-        kubectl port-forward svc/wisecow-service 4499:4499 &
-        sleep 10
+        kubectl port-forward svc/wisecow-service 4499:4499 > port-forward.log 2>&1 &
+        sleep 5
+        echo "Waiting for port 4499 to become available..."
+        for i in {1..10}; do nc -z localhost 4499 && echo "✅ Port 4499 is open" && break || sleep 2; done
 
     - name: Test Wisecow app via localhost using curl
       run: |
