--- a/.github/workflows/deploy-minikube.yml
+++ b/.github/workflows/deploy-minikube.yml
@@ -26,11 +26,26 @@ jobs:
         kubectl apply -f k8s/service.yml
         kubectl wait --for=condition=Ready pod -l app=wisecow --timeout=120s
 
-    - name: Test Wisecow service
+    - name: Wait for external IP assignment
       run: |
-        SERVICE_URL=$(minikube service wisecow-service --url)
-        echo "Testing Wisecow app at $SERVICE_URL"
-        RESPONSE=$(curl --max-time 10 --connect-timeout 5 $SERVICE_URL || echo "Connection failed")
+        echo "Waiting for LoadBalancer IP..."
+        for i in {1..30}; do
+          EXTERNAL_IP=$(kubectl get svc wisecow-service -o jsonpath="{.status.loadBalancer.ingress[0].ip}")
+          if [ -n "$EXTERNAL_IP" ]; then echo "✅ IP assigned: $EXTERNAL_IP"; break; fi
+          echo "⏳ Still waiting..."; sleep 5
+        done
+
+    - name: Show external access URL
+      run: |
+        EXTERNAL_IP=$(kubectl get svc wisecow-service -o jsonpath="{.status.loadBalancer.ingress[0].ip}")
+        echo "🌐 Wisecow is externally accessible at: http://$EXTERNAL_IP:4499"
+        echo "✅ Share this URL with your interviewer to demonstrate public access"
+
+    - name: Test Wisecow app via external IP
+      run: |
+        EXTERNAL_IP=$(kubectl get svc wisecow-service -o jsonpath="{.status.loadBalancer.ingress[0].ip}")
+        echo "Testing Wisecow app at http://$EXTERNAL_IP:4499"
+        RESPONSE=$(curl --max-time 10 --connect-timeout 5 http://$EXTERNAL_IP:4499 || echo "Connection failed")
         echo "$RESPONSE"
         if echo "$RESPONSE" | grep "<pre>"; then
           echo "✅ Wisecow app responded correctly"
@@ -38,10 +53,3 @@ jobs:
           echo "❌ Unexpected response from Wisecow app"
           exit 1
         fi
-
-    - name: Show external access details
-      run: |
-        NODE_PORT=$(kubectl get svc wisecow-service -o jsonpath="{.spec.ports[0].nodePort}")
-        MINIKUBE_IP=$(minikube ip)
-        echo "🌐 Wisecow is externally accessible at: http://$MINIKUBE_IP:$NODE_PORT"
-        echo "✅ Share this URL with your interviewer to demonstrate external access"
