--- a/.github/workflows/deploy-minikube.yml
+++ b/.github/workflows/deploy-minikube.yml
@@ -1,4 +1,4 @@
-name: Deploy Wisecow to Minikube (NodePort)
+name: Deploy Wisecow to Minikube (Local Access via Proxy)
 
 on:
   push:
@@ -26,19 +26,11 @@ jobs:
         kubectl apply -f k8s/service.yml
         kubectl wait --for=condition=Ready pod -l app=wisecow --timeout=120s
 
-    - name: Extract NodePort and Minikube IP
+    - name: Test Wisecow app via internal proxy
       run: |
-        NODE_PORT=$(kubectl get svc wisecow-service -o jsonpath="{.spec.ports[0].nodePort}")
-        MINIKUBE_IP=$(minikube ip)
-        echo "🌐 Wisecow is externally accessible at: http://$MINIKUBE_IP:$NODE_PORT"
-        echo "✅ Use this URL in your browser or curl to test the app"
-
-    - name: Test Wisecow app via NodePort
-      run: |
-        NODE_PORT=$(kubectl get svc wisecow-service -o jsonpath="{.spec.ports[0].nodePort}")
-        MINIKUBE_IP=$(minikube ip)
-        echo "Testing Wisecow app at http://$MINIKUBE_IP:$NODE_PORT"
-        RESPONSE=$(curl --max-time 10 --connect-timeout 5 http://$MINIKUBE_IP:$NODE_PORT || echo "Connection failed")
+        SERVICE_URL=$(minikube service wisecow-service --url)
+        echo "Testing Wisecow app at $SERVICE_URL"
+        RESPONSE=$(curl --max-time 10 --connect-timeout 5 $SERVICE_URL || echo "Connection failed")
         echo "$RESPONSE"
         if echo "$RESPONSE" | grep "<pre>"; then
           echo "✅ Wisecow app responded correctly"
@@ -46,3 +38,11 @@ jobs:
           echo "❌ Unexpected response from Wisecow app"
           exit 1
         fi
+
+    - name: Print local access instructions
+      run: |
+        echo "🌐 To access Wisecow in your browser, run this locally:"
+        echo ""
+        echo "    minikube service wisecow-service"
+        echo ""
+        echo "✅ This will open the app in your default browser using Minikube’s internal proxy"
