--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -10,4 +10,4 @@ spec:
       port: 4499
       targetPort: 4499
       # nodePort: 30499  # Optional: specify or let Kubernetes assign      
-  type: NodePort
+  # type: NodePort
