--- a/.github/workflows/deploy-minikube.yml
+++ b/.github/workflows/deploy-minikube.yml
@@ -23,12 +23,6 @@ jobs:
     - name: Build image inside Minikube
       run: minikube image build -t wisecow:local .
 
-    - name: Deploy Wisecow app
-      run: |
-        kubectl apply -f k8s/deployment.yml
-        kubectl apply -f k8s/service.yml
-        kubectl wait --for=condition=Ready pod -l app=wisecow --timeout=120s
-
     - name: Generate TLS cert and create secret
       run: |
         openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
@@ -37,8 +31,13 @@ jobs:
         kubectl create secret tls wisecow-tls \
           --cert=tls.crt --key=tls.key
 
-    - name: Apply Ingress for TLS
-      run: kubectl apply -f k8s/ingress.yml
+    - name: Deploy Wisecow app
+      run: |
+        kubectl apply -f k8s/deployment.yml
+        kubectl apply -f k8s/service.yml
+        kubectl apply -f k8s/ingress.yml
+        kubectl wait --for=condition=Ready pod -l app=wisecow --timeout=120s
+
 
     - name: Extract NodePort and Minikube IP
       run: |
@@ -66,8 +65,16 @@ jobs:
     - name: Run application health checker
       run: bash scripts/app-health-check.sh
 
-    - name: Install KubeArmor CRDs
-      run: kubectl apply -f https://github.com/kubearmor/KubeArmor/releases/latest/download/kubearmor-operator.yaml
+    - name: Install KubeArmor via Helm
+      run: |
+        helm repo add kubearmor https://kubearmor.github.io/charts
+        helm repo update
+        helm upgrade --install kubearmor-operator kubearmor/kubearmor-operator \
+          --namespace kubearmor --create-namespace \
+          --set autoDeploy=true
+
+    - name: Wait for KubeArmor pods to be ready
+      run: kubectl wait --for=condition=Ready pod -l app=kubearmor-operator -n kubearmor --timeout=120s
 
     - name: Apply KubeArmor zero-trust policy
       run: kubectl apply -f k8s/kubearmor-policy.yml
